--- a/src/index.html
+++ b/src/index.html
@@ -530,7 +530,7 @@
                         Мы доставляем ваши заказы курьером в специально оборудованном транспорте.
                     </p>
                     <p class="description description_size-s delivery__description">
-                        Компания Healthly food предлагает самые удобные и быстрые способы доставки по всей стране. Посмотреть подробные условия и географию вы можете по этой <a class="delivery__link" href="">ссылке</a>
+                        Компания Healthly food предлагает самые удобные и быстрые способы доставки по&nbsp;всей стране. Посмотреть подробные условия и географию вы можете по&nbsp;этой <a class="delivery__link" href="">ссылке</a>
                     </p>
                 </div>
                 <div class="delivery-box__pay">
@@ -547,7 +547,8 @@
             </div>
         </div>
     </section>
-    <section class="contact">
+    <div class="footer">
+        <section class="contact">
         <div class="container">
             <div class="contact-box">
                 <div class="contact-box__item">
@@ -584,6 +585,57 @@
                 </div>
             </div>
         </div>
-    </section>
+        </section>   
+        <footer>
+            <div class="container">
+                <div class="footer__box">
+                    <a href="#" class="logo"></a>
+                    <ul class="footer__list">
+                        <li class="footer__item">
+                            <a href="" class="footer__link">Наша продукция</a>
+                        </li>
+                        <li class="footer__item">
+                            <a href="" class="footer__link">Новинки</a>
+                        </li>
+                        <li class="footer__item">
+                            <a href="" class="footer__link">Доставка</a>
+                        </li>
+                    </ul>
+                    <ul class="footer__list">
+                        <li class="footer__item">
+                            Москва , ул.&nbsp;Ленинградская&nbsp;64
+                        </li>
+                        <li class="footer__item">
+                            пн-пт с&nbsp;09:00 до&nbsp;21:00
+                        </li>
+                        <li class="footer__item">
+                            сб-вс с&nbsp;09:00 до&nbsp;19:00
+                        </li>
+                    </ul>
+                    <div class="footer__contact">
+                        <a href="tel:+79453425555" class="footer__tel" >+7 945 342 55 55</a>
+                        <a href="mailto:healthlyfood@mail.ru" class="footer__tel" >e-mail: healthlyfood@mail.ru</a>
+                        <ul class="footer-social">
+                            <li class="footer-social__item">
+                                <a href="#" target="_blank" class="footer-social__link footer-social__vk"></a>
+                            </li>
+                            <li class="footer-social__item">
+                                <a href="#" target="_blank" class="footer-social__link footer-social__inst"></a>
+                            </li>
+                            <li class="footer-social__item">
+                                <a href="#" target="_blank" class="footer-social__link footer-social__fb"></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer__text">
+                    <p class="footer__copy">&copy; 2020, Все права защищены</p>
+                    <p class="footer__author">Сделано в рамках курса учебной платформы <a href="#">Annblok</a></p>
+                </div>
+            </div>
+        </footer> 
+    </div>
+    
+
 </body>
 </html>
