--- a/src/index.html
+++ b/src/index.html
@@ -122,7 +122,7 @@
                                 <a href="#" class="swiper-slide__link">Подробнее</a>
                             </div>
                         </div>
-                        <div class="swiper-slide">
+                        <div class="swiper-slide swiper-slide_white swiper-slide_steaks">
                             <h3 class="swiper-slide__title">
                                 Мясо, птица
                             </h3>
@@ -133,7 +133,7 @@
                                 <a href="#" class="swiper-slide__link">Подробнее</a>
                             </div>
                         </div>
-                        <div class="swiper-slide">
+                        <div class="swiper-slide swiper-slide_white swiper-slide_steaks">
                             <h3 class="swiper-slide__title">
                                 Мясо, птица
                             </h3>
@@ -144,7 +144,7 @@
                                 <a href="#" class="swiper-slide__link">Подробнее</a>
                             </div>
                         </div>
-                        <div class="swiper-slide">
+                        <div class="swiper-slide swiper-slide_white swiper-slide_steaks">
                             <h3 class="swiper-slide__title">
                                 Мясо, птица
                             </h3>
@@ -155,7 +155,7 @@
                                 <a href="#" class="swiper-slide__link">Подробнее</a>
                             </div>
                         </div>
-                        <div class="swiper-slide">
+                        <div class="swiper-slide swiper-slide_white swiper-slide_steaks">
                             <h3 class="swiper-slide__title">
                                 Мясо, птица
                             </h3>
@@ -166,7 +166,7 @@
                                 <a href="#" class="swiper-slide__link">Подробнее</a>
                             </div>
                         </div>
-                        <div class="swiper-slide">
+                        <div class="swiper-slide swiper-slide_white swiper-slide_steaks">
                             <h3 class="swiper-slide__title">
                                 Мясо, птица
                             </h3>
@@ -177,7 +177,7 @@
                                 <a href="#" class="swiper-slide__link">Подробнее</a>
                             </div>
                         </div>
-                        <div class="swiper-slide">
+                        <div class="swiper-slide swiper-slide_white swiper-slide_steaks">
                             <h3 class="swiper-slide__title">
                                 Мясо, птица
                             </h3>
@@ -614,7 +614,7 @@
                     </ul>
                     <div class="footer__contact">
                         <a href="tel:+79453425555" class="footer__tel" >+7 945 342 55 55</a>
-                        <a href="mailto:healthlyfood@mail.ru" class="footer__tel" >e-mail: healthlyfood@mail.ru</a>
+                        <a href="mailto:healthlyfood@mail.ru" class="footer__email" >e-mail: healthlyfood@mail.ru</a>
                         <ul class="footer-social">
                             <li class="footer-social__item">
                                 <a href="#" target="_blank" class="footer-social__link footer-social__vk"></a>
