--- a/src/index.html
+++ b/src/index.html
@@ -587,6 +587,7 @@
         </div>
         </section>   
         <footer>
+            <hr class="footer-hr">
             <div class="container">
                 <div class="footer__box">
                     <a href="#" class="logo"></a>
@@ -630,7 +631,9 @@
                 </div>
                 <div class="footer__text">
                     <p class="footer__copy">&copy; 2020, Все права защищены</p>
-                    <p class="footer__author">Сделано в рамках курса учебной платформы <a href="#">Annblok</a></p>
+                    <p class="footer__author">
+                        <span class="footer__author-text">Сделано в рамках курса учебной платформы </span><a href="#" class="footer__author-link">Annblok</a>
+                    </p>
                 </div>
             </div>
         </footer> 
