--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,10 @@
             <nav class="header__navigation">
                 <ul class="header__nav">
                     <li class="header__item">
-                        <a href="#" class="header__link">Наша продукция</a>
+                        <a href="#" class="header__link">Наша&nbsp;продукция</a>
                     </li>
                     <li class="header__item">
-                        <a href="#" class="header__link">О компании</a>
+                        <a href="#" class="header__link">О&nbsp;компании</a>
                     </li>
                     <li class="header__item">
                         <a href="#" class="header__link">Новинки</a>
@@ -33,9 +33,13 @@
                 </ul>
             </nav>
             <a href="tel:+79453425555" class="header__tel">+7 945 342 55 55</a>
-            <button href="#" class="header__cart">
-                <span class="header__counter">0</span>
-            </button>
+            <div class="header__buttons">
+                <a href="tel:+79453425555" class="header__phone"></a>
+                <button href="#" class="header__menu"></button>
+                <button href="#" class="header__cart">
+                    <span class="header__counter">0</span>
+                </button>
+            </div>
         </header>
         <div class="container">
             <div class="main__flex">
@@ -48,6 +52,7 @@
                         <p class="description description_size-s">
                             Сеть магазинов полезных продуктов питания, производство которых основано на&nbsp;принципах и стандартах органического чистых продуктов
                         </p>
+                        <img class="main__imagemobi" src="images/plate.png" alt="">
                         <div class="main__link">
                             <a href="#" class="link">Перейти в каталог</a>
                         </div>
