--- a/src/index.html
+++ b/src/index.html
@@ -540,7 +540,7 @@
                 </div>
                 <div class="delivery-box__pay">
                     <p class="description description_size-s delivery__description">
-                        Вы можете оплатить заказ наличными или картой курьеру, либо&nbsp;воспользоваться функцией онлайн-оплаты и получить <br>
+                        Вы можете оплатить заказ наличными или картой курьеру, либо&nbsp;воспользоваться функцией онлайн&nbsp;-&nbsp;оплаты и получить <br>
                         <span class="delivery__price"> скидку&nbsp;5%.</span>
                     </p>
                     <ul class="delivery__list">
