--- a/src/index.html
+++ b/src/index.html
@@ -594,43 +594,45 @@
         <footer>
             <div class="container">
                 <div class="footer__box">
-                    <a href="#" class="logo"></a>
-                    <ul class="footer__list">
-                        <li class="footer__item">
-                            <a href="" class="footer__link">Наша продукция</a>
-                        </li>
-                        <li class="footer__item">
-                            <a href="" class="footer__link">Новинки</a>
-                        </li>
-                        <li class="footer__item">
-                            <a href="" class="footer__link">Доставка</a>
-                        </li>
-                    </ul>
-                    <ul class="footer__list">
-                        <li class="footer__item">
-                            Москва , ул.&nbsp;Ленинградская&nbsp;64
-                        </li>
-                        <li class="footer__item">
-                            пн-пт с&nbsp;09:00 до&nbsp;21:00
-                        </li>
-                        <li class="footer__item">
-                            сб-вс с&nbsp;09:00 до&nbsp;19:00
-                        </li>
-                    </ul>
-                    <div class="footer__contact">
-                        <a href="tel:+79453425555" class="footer__tel" >+7 945 342 55 55</a>
-                        <a href="mailto:healthlyfood@mail.ru" class="footer__email" >e-mail: healthlyfood@mail.ru</a>
-                        <ul class="footer-social">
-                            <li class="footer-social__item">
-                                <a href="#" target="_blank" class="footer-social__link footer-social__vk"></a>
+                    <a href="#" class="logo logo__footer"></a>
+                    <div class="footer__info">
+                        <ul class="footer__list">
+                            <li class="footer__item">
+                                <a href="" class="footer__link">Наша продукция</a>
                             </li>
-                            <li class="footer-social__item">
-                                <a href="#" target="_blank" class="footer-social__link footer-social__inst"></a>
+                            <li class="footer__item">
+                                <a href="" class="footer__link">Новинки</a>
                             </li>
-                            <li class="footer-social__item">
-                                <a href="#" target="_blank" class="footer-social__link footer-social__fb"></a>
+                            <li class="footer__item">
+                                <a href="" class="footer__link">Доставка</a>
                             </li>
                         </ul>
+                        <ul class="footer__list">
+                            <li class="footer__item">
+                                Москва , ул.&nbsp;Ленинградская&nbsp;64
+                            </li>
+                            <li class="footer__item">
+                                пн-пт с&nbsp;09:00 до&nbsp;21:00
+                            </li>
+                            <li class="footer__item">
+                                сб-вс с&nbsp;09:00 до&nbsp;19:00
+                            </li>
+                        </ul>
+                        <div class="footer__contact">
+                            <a href="tel:+79453425555" class="footer__tel" >+7 945 342 55 55</a>
+                            <a href="mailto:healthlyfood@mail.ru" class="footer__email" >e-mail: healthlyfood@mail.ru</a>
+                            <ul class="footer-social">
+                                <li class="footer-social__item">
+                                    <a href="#" target="_blank" class="footer-social__link footer-social__vk"></a>
+                                </li>
+                                <li class="footer-social__item">
+                                    <a href="#" target="_blank" class="footer-social__link footer-social__inst"></a>
+                                </li>
+                                <li class="footer-social__item">
+                                    <a href="#" target="_blank" class="footer-social__link footer-social__fb"></a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <div class="footer__text">
