--- a/src/index.html
+++ b/src/index.html
@@ -342,6 +342,15 @@
                     <a class="category__link" href="">Овощи и фрукты</a>
                 </li>
             </ul>
+            <div class="catalog__list category-swiper categorySwiper">
+                <div class="swiper-wrapper">
+                    <a href="" class="swiper-slide category-swiper__link">Молочные продукты</a>
+                    <a href="" class="swiper-slide category-swiper__link">Бакалея</a>
+                    <a href="" class="swiper-slide category-swiper__link">Мясо, птица</a>
+                    <a href="" class="swiper-slide category-swiper__link">Детям</a>
+                    <a href="" class="swiper-slide category-swiper__link">Овощи и фрукты</a>
+                </div>
+            </div>
             <div class="catalog-grid">
                 <div class="catalog-grid__item">
                     <div class="catalog-grid__cover">
