--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Здоровое питание</title>
+    <link rel="apple-touch-icon" sizes="192x192" href="images/favicon/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="images/favicon/android-chrome-512x512.png">
+    <link rel="icon" type="image/png" sizes="150x150" href="images/favicon/mstile-150x150.png">
+    <link rel="icon" sizes="16x16" href="images/favicon/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+    <link rel="mask-icon" href="images/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
     <div class="wrapper">
@@ -36,8 +46,8 @@
                 <a href="tel:+79453425555" class="header__tel">+7 945 342 55 55</a>
                 <div class="header__buttons">
                     <a href="tel:+79453425555" class="header__phone"></a>
-                    <button href="#" class="header__menu"></button>
-                    <button href="#" class="header__cart">
+                    <button class="header__menu"></button>
+                    <button class="header__cart">
                         <span class="header__counter">0</span>
                     </button>
                 </div>
@@ -399,7 +409,7 @@
                     </div>
                     <div class="catalog-grid__item">
                         <div class="catalog-grid__cover">
-                            <img class="catalog-grid__image" src="images/catalog/cottage cheese.png" alt="">
+                            <img class="catalog-grid__image" src="images/catalog/cottage-cheese.png" alt="">
                         </div>
                         <h3 class="catalog-grid__title">
                             Творог
